iOS: Add support for Mac Catalyst

Issue: #20132
Signed-off-by: Raul Metsma <raul@metsma.ee>