Source/cmMakefile.cxx
@@ -2621,6 +2621,14 @@ bool cmMakefile::PlatformIsAppleSimulator() const
     .count(this->GetAppleSDKType());
 }
 
+bool cmMakefile::PlatformIsAppleCatalyst() const
+{
+  std::string systemName;
+  systemName = this->GetSafeDefinition("CMAKE_SYSTEM_NAME");
+  systemName = cmSystemTools::LowerCase(systemName);
+  return systemName == "ios" && this->GetAppleSDKType() == AppleSDK::MacOS;
+}
+
 bool cmMakefile::PlatformSupportsAppleTextStubs() const
 {
   return this->IsOn("APPLE") && this->IsSet("CMAKE_TAPI");
