Help/release/dev/ios-mac-catalyst.rst
@@ -1,0 +1,6 @@
+ios-mac-catalyst
+----------------
+
+* The :module:`CMakePackageConfigHelpers` module's
+  :command:`generate_apple_platform_selection_file` function
+  gained support iOS Mac Catalyst.
