Tests/RunCMake/XcFramework/export-ios-catalyst.cmake
@@ -1,0 +1,4 @@
+set(platform_name ios-catalyst)
+set(platform_arg IOS_CATALYST_INCLUDE_FILE)
+set(CMAKE_OSX_DEPLOYMENT_TARGET "15.0")
+include(export-common.cmake)
